cabal-version: 3.6

-- Created :  1 October 2023

name:
  tasty-test
version:
  0.1
synopsis:
  TODO
description:
  TODO
copyright:
  (c) Sergey Vinokurov 2023
license:
  Apache-2.0
-- license-file:
--   LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

extra-source-files:
  Changelog.md
  Readme.md

homepage:
  https://github.com/sergv/tasty-test

source-repository head
  type: git
  location: https://github.com/sergv/tasty-test.git

common ghc-options
  default-language:
    GHC2021

  default-extensions:
    LambdaCase

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations

test-suite test
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    test/TestMain.hs
  build-depends:
    , base >= 4.14
    , tasty
    , tasty-quickcheck
  ghc-options:
    -rtsopts
    -main-is TestMain
